login functionality done

--- a/config.env
+++ b/config.env
@@ -4,4 +4,6 @@ CONN_STR=mongodb+srv://admin:YkHvzmh7GNi4Ei0P@cluster0.gfb7mep.mongodb.net/cinef
 LOCAL_CONN_STR=mongodb://localhost:27017/cinefix
 DB_USER=admin
 DB_PASSWORD=YkHvzmh7GNi4Ei0P
+SECRET_STR='asg-7hggfdgd-53bjhgj-76lkklmnh'
+LOGIN_EXPIRES=30d
 
