reset Password functionality

--- a/config.env
+++ b/config.env
@@ -6,4 +6,7 @@ DB_USER=admin
 DB_PASSWORD=YkHvzmh7GNi4Ei0P
 SECRET_STR='asg-7hggfdgd-53bjhgj-76lkklmnh'
 LOGIN_EXPIRES=30d
-
+EMAIL_USER=4f5e62a6483f3d
+EMAIL_PASSWORD=af09ae910d5409
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
