fixed the issue

--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 NODE_ENV=development
 PORT=3000
-CONN_STR=mongodb+srv://admin:YkHvzmh7GNi4Ei0P@cluster0.gfb7mep.mongodb.net/cinefix?retryWrites=true&w=majority&appName=Cluster0
-LOCAL_CONN_STR=mongodb://localhost:27017/cinefix
+CONN_STR=mongodb+srv://admin:admin@cluster0.je4kt.mongodb.net/cyneflixs?retryWrites=true&w=majority&appName=Cluster0
+LOCAL_CONN_STR=mongodb://localhost:27017/cyneflixs
 DB_USER=admin
-DB_PASSWORD=YkHvzmh7GNi4Ei0P
+DB_PASSWORD=admin
 SECRET_STR='asg-7hggfdgd-53bjhgj-76lkklmnh'
 LOGIN_EXPIRES=30d
 EMAIL_USER=4f5e62a6483f3d
